--- a/move.css
+++ b/move.css
@@ -1,5 +1,7 @@
 body {
 	background-color:lightblue;
+	background-image: url(himmel.webp);
+	background-size: cover;
 }
 #eple {
 	position: absolute;
