minor bugfix and style change
increased hitbox size
changed z-index on player, enemy, and points counter
deleted unused/commented away code

--- a/move.css
+++ b/move.css
@@ -10,6 +10,7 @@ body {
 	width: 100px;
 	height: 100px;
 	transition: 0.5s;
+	z-index:22; 
 }
 
 /*Death hanimation*/
@@ -36,12 +37,13 @@ body {
 /*Death hanimation*/
 
 
-#fly {
-	transition: 0.002s;
+#fly{
+	z-index:20;
 }
 #poengvisning {
 	position: absolute;
 	top: 2vh;
 	left: 50vw;
 	font-size: 5vw;
+	z-index:18;
 }
