--- a/move.css
+++ b/move.css
@@ -1,7 +1,14 @@
+:root{
+	--z-upper:90;
+	--z-middle:20;
+	--z-lower:10;
+}
 body {
 	background-color:lightblue;
 	background-image: url(./assets/images/static/himmel.webp);
 	background-size: cover;
+	overflow:hidden;
+	
 }
 #eple {
 	position: absolute;
@@ -10,7 +17,7 @@ body {
 	width: 100px;
 	height: 100px;
 	transition: 0.5s;
-	z-index:22; 
+	z-index:var(--z-upper);
 }
 
 /*Death hanimation*/
@@ -34,16 +41,74 @@ body {
 		filter:hue-rotate(0deg);		
 	}
 }
+@keyframes cloud_scroll{
+	0%{
+		left:-50%;
+		top:15%; 
+	}
+	25%{
+		left:130%;
+		top:40%; 
+	}
+	50%{
+		left:50%;
+		top:100%;
+	}
+	75%{
+		top:50%;
+		left:75%;
+	}
+	90%{
+		top:50%;
+		left:130%;
+	}
+	99%{
+		opacity:0%;
+	}
+	100%{
+		top:-50%;
+		left:-50%;
+		opacity:70%;
+	}
+}
 /*Death hanimation*/
 
 
 #fly{
-	z-index:20;
+	z-index:var(--z-lower);
 }
 #poengvisning {
-	position: absolute;
+	position: relative;
 	top: 2vh;
 	left: 50vw;
 	font-size: 5vw;
-	z-index:18;
+	z-index:var(--z-middle);
+}
+
+.cloud{
+	position:absolute;
+	opacity:70%;
+	z-index:var(--z-upper);
+}
+#c1{
+	right:0px;
+	bottom:0px;
+	rotate:180deg;
+}
+#c2{
+	left:0px;
+	top:0px;
+}
+#c3{
+	left:10px;
+	top:50px;
+}
+#c4{
+	width:400px;
+	height:auto;
+	
+	animation-name: cloud_scroll;
+	animation-duration:800s;
+	animation-iteration-count:infinite;
+
 }
